fix spacing at wip banner

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ main {
 #wip {
   background-color: light-dark(var(--color-dark), var(--color-light));
   color: light-dark(var(--color-light), var(--color-dark));
-  margin: 1rem 0;
+  margin: .1rem 0 1rem;
   text-align: center;
   padding: 1rem .5rem;
   border: solid .25rem light-dark(var(--color-orange-light), var(--color-orange-dark));
